--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.16",
     "daisyui": "^3.9.2",
     "postcss": "^8.4.31",
+    "react-router-dom": "^6.16.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.4"
