--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@tauri-apps/api": "^1.5.0",
     "heroicons": "^2.0.18",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "theme-change": "^2.5.0"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
