--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@nextui-org/react": "^2.1.13",
     "@tauri-apps/api": "^1.5.0",
+    "framer-motion": "^10.16.4",
     "heroicons": "^2.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "tailwind-variants": "^0.1.14",
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
