--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "ai_chip_plus"
-version = "0.0.3"
+name = "ai_chip_pro_max"
+version = "0.0.0"
 description = "A Tauri App"
 authors = ["you"]
 license = ""
@@ -13,11 +13,10 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [ "window-all", "shell-open"] }
+tauri = { version = "1.5", features = [ "api-all"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-window-shadows = "0.2.1"
-tokio = "1.33.0"
+window-shadows = "0.2.2"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
